k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat
      labels: 
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: rahul7600/chat-app-frontend:latest
        ports:
        - containerPort: 80
