k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
