k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chat
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # 👇 ACM certificate ARN from AWS Console
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:166023636503:certificate/ec6b8322-2928-4cbc-b777-d5feff36474c

    # Listeners: HTTP(80) + HTTPS(443)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'

    # Force redirect all HTTP → HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: devopswithrahuldevray.shop
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
